k8s/post-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-api
  namespace: worksy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-api
  template:
    metadata:
      labels:
        app: post-api
    spec:
      containers:
      - name: post-api
        image: shivam1886/post-service:latest
        ports:
        - containerPort: 3001
