k8s/auth-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
  namespace: worksy
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP # Exposes the service on a cluster-internal IP
