k8s/post-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-api-service
  namespace: worksy
spec:
  selector:
    app: post-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
