k8s/search-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api-service
  namespace: worksy
spec:
  selector:
    app: search-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
